--- a/index.html
+++ b/index.html
@@ -46,6 +46,118 @@
 
     </div>
   </header>
-  
+  <main class="main">
+   <div class="main-image">
+    <svg class="home-image" width="734" height="640" viewBox="0 0 734 640" fill="none" xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink">
+      <rect width="734" height="640" fill="url(#pattern0)" />
+      <defs>
+        <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+          <use xlink:href="#image0_1_86" transform="translate(-0.00408719) scale(0.0013624 0.0015625)" />
+        </pattern>
+        <image id="image0_1_86" width="740" height="640" xlink:href="img/home.jpg" />
+      </defs>
+      <path data-floor="02" d="M222 487L442.8 495L512 481.3V503L443.5 522.7L222 511.7V487Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="03"d="M223 526V501L443.3 504.3L513 501V521L443.7 534L223 526Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="04"d="M223 500V475H444H513V498L445 505L223 500Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="05"d="M223 476V451L444.3 447.3L512 454V476H444" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="06" d="M223 450V424L444.5 420.7L513 431.7V453L444 446.3L223 450Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="07" d="M222 423V399.3L443 387L514 410V431.3L443 419L222 423Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="08" d="M222 401V376L444.2 359.7L514 388.3V409L443.7 387.3L222 401Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="09" d="M222 376V351L444.5 330.7L514 367.3V388L442 359.3L222 376Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="10" d="M222 350V326L445 301.3L514 345.3V367L444.7 329L222 350Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="11" d="M222 325V301L444.5 272.3L514 323.3V344L443.7 301.7L222 325Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="12" d="M221 301V277L443.3 244L514 303.3V323L444 272.3L221 301Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="13" d="M222 276V252L443.2 217L513 281V302L444.3 243.7L222 276Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="14" d="M222 252V227L444.3 189L513 259.3V280L444 216L222 252Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="15" d="M222 226V201L442.8 157.3L513 236.3V259L444 185.7L222 226Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="16" d="M223 202V177L443 129L513 214V237L442.3 157.7L223 202Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="17" d="M222 177V152L441.8 100L513 192.3V215L443.3 128.7L222 177Z" fill="#3595F6" fill-opacity="0.75" />
+      <path data-floor="18" d="M222 152V126L444 69.3L513 171V192L443.7 100.3L222 152Z" fill="#3595F6" fill-opacity="0.75" />
+    
+    </svg>
+
+   </div>
+   <!-- /.main-image -->
+   <div class="main-info">
+    <h2 class="main-title">Выберите желаемый этаж</h2>
+    <div class="counter-group">
+      <button class="counter-btn counter-up">
+        <img src="./img/arrow.svg" alt="arrow-up" class="counter-arrow counter-arrow-up">
+      </button>
+      <span class="floor-counter counter">02</span>
+      <button class="counter-btn counter-down">
+        <img src="./img/arrow.svg" alt="arrow-down" class="counter-arrow counter-arrow-down">
+      </button>
+    </div>
+        <button class="btn btn-primary view-flats">Смотреть квартиры на этаже</button>
+    <!--/.counter-group-->
+   </div>
+  </main>
+  <div class="modal">
+    <div class="modal-dialog">
+      <button class="modal-close-btn"><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 2L26 26" stroke="#3596F5" stroke-width="3" />
+        <path d="M26 2L2 26" stroke="#3596F5" stroke-width="3" />
+      </svg></button>
+     <div class="modal-image">
+      <h3 class="modal-title">Этаж <span class="modal-counter counter">02</span></h3>
+      <img src="./img/Floor.jpg" alt="">
+     </div>
+
+     <!-- /.modal-image -->
+     <div class="modal-info">
+      <h3 class="modal-title">Выберите квартиру</h3>
+      <ul class="flat-list">
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 41, 1 комн. 38.9 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 442, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+        <li class="flat-item"><a href="" class="flat-link">кв. 40, 2 комн. 62.5 кв. м.</a></li>
+      </ul>
+      <p class="modal-alert">Квартиры, отмеченные серым, уже выкуплены</p>
+     </div>
+     <!-- /.madal-info -->
+    </div>
+  </div>
+  <!-- /.modal -->
+  <footer class="footer">
+    <div class="footer-left">
+        <div class="logo-img">
+          <img src="./img/logo-img.svg" alt="">
+        </div>
+        <div class="phone">
+          <p class="phone-num"><span>Закажите звонок: <br></span>8 
+          (843) 123-45-67</p>
+        
+        </div>
+        <ul class="social-list">
+          <li class="social-list-item"><a href="" class="social-list-link"><img src="./img/001-facebook.svg" alt=""></a></li>
+          <li class="social-list-item"><a href="" class="social-list-link"><img src="./img/002-instagram.svg" alt=""></a></li>
+          <li class="social-list-item"><a href="" class="social-list-link"><img src="./img/003-twitter.svg" alt=""></a></li>
+          <li class="social-list-item"><a href="" class="social-list-link"><img src="./img/004-youtube.svg" alt=""></a></li>
+        </ul>
+        </div>
+    </div>
+    <!-- /.footer-left -->
+    <div class="footer-right">
+      <ul class="footer-list">
+        <li class="footer-list-item"><a href="#" class="footer-list-link">Политика конфиденциальности</a></li>
+        <li class="footer-list-item"><a href="#" class="footer-list-link">Публичная оферта</a></li>
+        <li class="footer-list-item"><a href="#" class="footer-list-link">Контакты</a></li>
+      </ul>
+    </div>
+    <!-- /.footer-right -->
+   
+
+
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
+<script src="./js/main.js"></script>
 </html>
